# CodeArchaeologist

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HACKATHON_IDEAS.md  HACKATHON_STORY.md  HACKATHON_SUBMISSION.md  HACKATHON_SUBMISSION_ANSWERS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_TASKS.md  PHASE2_COMPLETE.md  PHASE3_SPEC_COMPLETE.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  README_FIRST.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  START_HERE.txt  TASK_3_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  run_ingestion_tests.bat  test_connectivity.py
.github/workflows/: property-tests.yml
.hypothesis/constants/: 004e722d2b39195a  00dbb7c5162c140d  039d69c2ad03c76d  041b82baf95116f0  0588a2471da78b21  067138e1b3a4ebbd  07475514dc0bbadb  075aa0dd31e12c03  08a45b14b7a1aa82  09ae28b390a241d0  0bb70d1826311e40  0bc3b2f77e74ecd9  0f607eefdf95003a  100da2413d65b0b1  110a1d1d892c7388  118480740acbcd3c  11a4fb9bf042a054  13efa0910df75e7a  146ce438f76c65d3  1711dca7bbb78b0f  1a5326b88fdd03ad  1b03421aacbc7cd8  1cfc97167b9009fb  1d45cef60f923b7c  1dc359315dc82348  1f78e9924d375ff1  1fd377192cc5570e  25878421010898fc  270e659719bf252e  2883118a9e228e91  2e2bf2ed9c60687e  30ef0a2658953185  319c88536c822e3a  31ef549c47d40296  329eed6e4c9b2393  368f19d2cc26015d  370516b018e5bfaa  372ae7d00561b2ec  3b38e75da8a1596a  3d723da5cd41cc99  (+87 more)
.hypothesis/tmp/: tmp4fe5rfnc  tmp8t4p4ynp  tmpqwcc70g7  tmps663njuq
.kiro/hooks/: watch-new-repos.kiro.hook
.kiro/specs/code-archaeologist/: design.md  requirements.md  tasks.md
.kiro/specs/phase3-property-testing/: design.md  requirements.md  tasks.md
.kiro/steering/: documentation_style.md  legacy_detection.md  modernization_standards.md
backend/: .env  .env.example  .gitignore  6.92.0  PHASE3_CI_DOCS_COMPLETE.md  PROPERTY_TESTING_GUIDE.md  README.md  celery_app.py  database.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_ingestion_tests.py  run_scanning_tests.py  setup_database.py  test_backend.py  test_detector.py
backend/models/: __init__.py  analysis.py  base.py  repository.py
backend/services/: __init__.py  ai_engine.py  analysis_service.py  dependency_extractor.py  file_scanner.py  legacy_detector.py  repository_ingester.py
backend/tasks/: __init__.py  analysis_tasks.py
backend/tests/: FINAL_TEST_STATUS.md  TEST_FIXES_SUMMARY.md  __init__.py  conftest.py  test_ai_engine.py  test_api.py  test_generators.py  test_hypothesis_setup.py  test_legacy_detector.py  test_properties_analysis.py  test_properties_extraction.py  test_properties_generators.py  test_properties_ingestion.py  test_properties_persistence.py  test_properties_scanning.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  page.tsx
frontend/components/: CodeDiff.tsx  Terminal.tsx
mcp/: README.md  github_connector.d.ts  github_connector.d.ts.map  github_connector.js  github_connector.js.map  github_connector.ts  package.json  test_mcp.js  tsconfig.json
